# keythings-monorepo

./: .cursorrules  .gitignore  AGENTS.md  BACKEND_OPERATOR_SETUP.md  DEX_INTEGRATION_PLAN.md  README.md  TOKEN_DEBUG_STEPS.md  TOKEN_INTEGRATION_SUMMARY.md  WALLET_CONNECTION_FIX.md  WALLET_LOCK_DETECTION_FIX.md  debug-keeta-backend.js  eslint.config.mjs  mcp-config.json  next.config.mjs  package-lock.json  package.json  rfq_orders.json  temp-mcp-request.ps1  test-backend-debug.js  test-backend-fix.js  test-backend-service.js  test-keeta-backend.js  test-service-keeta.js  tsconfig.json  vercel.json
.cursor/: mcp.json
.windsor/: config.json
Keeta CEX Design/: AUTO_CREDIT_SOLUTION.md  CONSOLIDATION_SUMMARY.md  DEX_INTEGRATION_PLAN.md  EXECUTIVE_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  KEETA_CEX_BLUEPRINT.md  KEETA_CEX_MASTER_PLAN.md  KEETA_POOL_INTEGRATION_COMPLETE.md  KEETA_POOL_INTEGRATION_PROGRESS.md  KEETA_TESTNET_READY.md  LIQUIDITY_POOL_QUICKSTART.md  NON_CUSTODIAL_IMPLEMENTATION_SUMMARY.md  PHASE_2_COMPLETE.md  PHASE_2_FINAL_COMPLETE.md  PHASE_2_WEEK_5_PROGRESS.md  POOLS_PAGE_COMPLETE.md  POOL_CUSTODY_EXPLAINED.md  QUICK_START.md  README.md  README_KEETA_INTEGRATION.md  README_PHASE_2_COMPLETE.md  REAL_WALLET_INTEGRATION.md  (+13 more)
keythings-dapp-engine/: .env.example  .gitignore  Cargo.toml
keythings-dapp-engine/src/: api.rs  keeta.rs  keeta_rfq.rs  ledger.rs  main.rs  models.rs  pool.rs  pool_api.rs  reconcile.rs  rfq_api.rs  settlement.rs  websocket.rs
(+269 files in other folders)
